# eencijfer

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
eencijfer/: __init__.py  cli.py  column_converters.py  eencijfer.py  init.py  pii.py  qa.py  settings.py
eencijfer/assets/: __init__.py  cohorten.py  eencijfer.py  eindexamencijfers.py
eencijfer/assets/transformations/: diploma.py  local_data.py  opleiding.py  postcodes.py  prestatieafspraken.py  vooropleiding.py
eencijfer/assets/transformations/datasets/21RI/: croho_naam_opleiding_faculteit.csv
eencijfer/convert/: __init__.py  column_converters.py  eencijfer.py  pii.py
eencijfer/convert/import_definitions/: Croho.csv  Croho_vest.csv  Dec_actuele_instelling.csv  Dec_brinvestigingsnummer.csv  Dec_ho_ISCED.csv  Dec_land_naar_herkomstindikking.csv  Dec_landcode.csv  Dec_nationaliteitscode.csv  Dec_vakcode.csv  Dec_vestnr_ho_compleet.csv  Dec_vooropl.csv  Dec_vopl.csv  EV____24.csv  VAKHAVW_____.csv
eencijfer/import_definitions/: Croho.csv  Croho_vest.csv  Dec_brinnummer.csv  Dec_ho-inst.csv  Dec_isat.csv  Dec_postcodecijfers_2023.csv  EV____23.csv  EV____24.csv  VAKHAVW_____.csv
eencijfer/io/: __init__.py  db.py  file.py  files.py
eencijfer/utils/: __init__.py  detect_eencijfer_files.py  init.py  local_data.py  qa.py
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_cli.py  test_eencijfer.py
usage/: index.html
