[tool]
[tool.poetry]
name = "eencijfer"
version = "0.2.9"
homepage = "https://github.com/enningb/eencijfer"
description = "ETL-tool for Dutch eencijfer."
authors = ["Bram Enning <bramenning@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "eencijfer" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
typer =">=0.9.0"
pandas =">=2.0.0"
numpy = ">=1.26.2"
black  = { version = "^23.12.1", optional = true}
isort  = { version = "^5.13.2", optional = true}
flake8  = { version = "^6.1.0", optional = true}
flake8-docstrings = { version = "^1.7.0", optional = true }
mypy = {version = "^1.8.0", optional = true}
pytest  = { version = "^7.4.3", optional = true}
pytest-cov  = { version = "^4.1.0", optional = true}
tox  = { version = "^4.11.4", optional = true}
virtualenv  = { version = "^20.25.0", optional = true}
pip  = { version = "^23.3.2", optional = true}
mkdocs  = { version = "^1.5.3", optional = true}
mkdocs-include-markdown-plugin  = { version = "^6.0.4", optional = true}
mkdocs-material  = { version = "^9.5.2", optional = true}
mkdocs-material-extensions  = { version = "^1.3.1", optional = true}
twine  = { version = "^4.0.2", optional = true}
mkdocs-autorefs = {version = "^0.5.0", optional = true}
pre-commit = {version = "^3.6.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}


[tool.poetry.scripts]
eencijfer  = "eencijfer.cli:app"


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
